--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@rollup/rollup-win32-x64-msvc": "^4.31.0",
         "fivem-js": "^1.3.0"
     }
 }
