--- a/ui/package.json
+++ b/ui/package.json
@@ -5,18 +5,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev --host",
     "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3"
+  },
+  "devDependencies": {
+    "svelte": "^5.19.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "svelte": "^5.19.0",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.7"
+    "@sveltejs/adapter-auto": "^4.0.0",
+    "vite": "^6.0.7",
+    "vitest": "^3.0.2"
   }
 }
