--- a/ui/package.json
+++ b/ui/package.json
@@ -15,11 +15,12 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3"
   },
   "devDependencies": {
-    "svelte": "^5.19.0",
+    "@esbuild/linux-x64": "^0.24.2",
+    "@sveltejs/adapter-auto": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
+    "svelte": "^5.19.0",
     "tailwindcss": "^3.4.17",
-    "@sveltejs/adapter-auto": "^4.0.0",
     "vite": "^6.0.7",
     "vitest": "^3.0.2"
   }
